third commit Form, Model

--- a/first/templates/first/index.html
+++ b/first/templates/first/index.html
@@ -1,21 +1,9 @@
-{%load static%}
-<!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Hello World!</p>
+{% extends 'first/base.html' %} {% load static %} {% block content %}
+<p>Hello World!</p>
 
-    <img
-      style="width: 80px"
-      src="{% static 'first/image.png'%}"
-      alat="다람쥐"
-    />
-    <p>{{current_date}}</p>
-    <p>{{current_date|date:"y년 mn월 d일 h시"}}</p>
+<img style="width: 80px" src="{% static 'first/image.png'%}" alat="다람쥐" />
+<p>{{current_date}}</p>
+<p>{{current_date|date:"y년 mn월 d일 h시"}}</p>
 
-    <a href="{% url 'select' %}">시작하기!</a>
-  </body>
-</html>
+<a href="{% url 'select' %}">시작하기!</a>
+{% endblock %}
